# acelerometer-test

./: Acelerometro.cpp  Acelerometro.h  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resultados.txt  ui_mainwindow.h
